[CHANGE] Fixed the issue where sometimes the popup isn't placed in the visible region when an annotation is selected.

--- a/src/components/ToolStylePopup/ToolStylePopup.scss
+++ b/src/components/ToolStylePopup/ToolStylePopup.scss
@@ -5,12 +5,8 @@
   @extend %open;
   @extend %closed;
   @extend %popup-mobile;
+  @extend %popup-landscape;
 
   position: absolute;
   z-index: 85;
-
-  @media (orientation: landscape) {
-    max-height: calc(100% - #{$top-bar-height-m});
-    overflow: auto;
-  }
 }
